@@ -146,6 +146,7 @@ class CWebApplication extends CApplication
 		{
 			$oldController=$this->_controller;
 			$this->_controller=$controller;
+			$controller->init();
 			$controller->run($actionID);
 			$this->_controller=$oldController;
 		}
